--- a/FuzzTest/FuzzTest/Base.lproj/Main.storyboard
+++ b/FuzzTest/FuzzTest/Base.lproj/Main.storyboard
@@ -17,9 +17,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="dZ9-WA-Kaz" kind="relationship" relationship="viewControllers" id="jhd-Rd-xTJ"/>
-                        <segue destination="iWO-yb-E4x" kind="relationship" relationship="viewControllers" id="H1j-XM-421"/>
-                        <segue destination="KLG-nU-LYo" kind="relationship" relationship="viewControllers" id="0zB-9M-pWD"/>
+                        <segue destination="KLG-nU-LYo" kind="relationship" relationship="viewControllers" id="Hvd-kt-RLh"/>
+                        <segue destination="iWO-yb-E4x" kind="relationship" relationship="viewControllers" id="sfP-GV-3cZ"/>
+                        <segue destination="dZ9-WA-Kaz" kind="relationship" relationship="viewControllers" id="Wbg-GS-YOo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yQO-aO-yni" userLabel="First Responder" sceneMemberID="firstResponder"/>
